# exchange

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: cmake.yml
include/: exchange.hpp
include/exchange/: BinaryInputFeed.hpp  OrderBook.hpp
include/exchange/common/: Order.hpp  Protocol.hpp  TradeReport.hpp
src/: BinaryInputFeed.cpp  OrderBook.cpp  generator.cpp  main.cpp
tests/: CMakeLists.txt  TESTS.md  test_binary_feed.cpp  test_exchange_misc.cpp  test_order_book.cpp  test_order_cancelling.cpp  test_order_matching.cpp
